src/app/globals.css
@import 'font.css';
@import 'typo.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

/*MODAL*/

.react-aria-ModalOverlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: rgba(0 0 0 / .5);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 100;
    overflow-y: scroll;

    &[data-entering] {
        animation: modal-fade 200ms;
    }

    &[data-exiting] {
        animation: modal-fade 150ms reverse ease-in;
    }
}

.react-aria-Modal {
    box-shadow: 0 8px 20px rgba(0 0 0 / 0.1);
    border-radius: 44px;
    background: white;
    outline: none;
    width: 90%;
    max-width: 1100px;
    @apply top-0 sm:top-auto absolute border border-sand-5 bg-sand-1 p-4;


    &[data-entering] {
        animation: modal-zoom 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
    }

    section {
        outline: none;
    }
}

@keyframes modal-fade {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes modal-zoom {
    from {
        transform: scale(0.8);
    }

    to {
        transform: scale(1);
    }
}

/*POPOVER*/

.react-aria-Popover {
    @apply border border-sand-5 p-4 rounded-lg bg-sand-1 outline-0;
    outline: none;
    box-shadow: 0 8px 20px rgba(0 0 0 / 0.1);
    max-width: 350px;
    box-sizing: border-box;

    section{
        outline: none;
    }

    .react-aria-OverlayArrow svg {
        @apply stroke-1 block fill-sand-12 stroke-sand-12;
    }

    &[data-placement=top] {
        --origin: translateY(8px);

        &:has(.react-aria-OverlayArrow) {
            margin-bottom: 6px;
        }
    }

    &[data-placement=bottom] {
        --origin: translateY(-8px);

        &:has(.react-aria-OverlayArrow) {
            margin-top: 6px;
        }

        .react-aria-OverlayArrow svg {
            transform: rotate(180deg);
        }
    }

    &[data-placement=right] {
        --origin: translateX(-8px);

        &:has(.react-aria-OverlayArrow) {
            margin-left: 6px;
        }

        .react-aria-OverlayArrow svg {
            transform: rotate(90deg);
        }
    }

    &[data-placement=left] {
        --origin: translateX(8px);

        &:has(.react-aria-OverlayArrow) {
            margin-right: 6px;
        }

        .react-aria-OverlayArrow svg {
            transform: rotate(-90deg);
        }
    }

    &[data-entering] {
        animation: popover-slide 200ms;
    }

    &[data-exiting] {
        animation: popover-slide 200ms reverse ease-in;
    }
}

@keyframes popover-slide {
    from {
        transform: var(--origin);
        opacity: 0;
    }

    to {
        transform: translateY(0);
        opacity: 1;
    }
}

/*SWITCH*/

.react-aria-Switch {
    forced-color-adjust: none;
    @apply flex items-center gap-2 cursor-pointer;

    .indicator {
        width: 37px;
        height: 20px;
        @apply rounded-full bg-sand-6;
        transition: all 200ms;

        &:before {
            content: '';
            width: 14px;
            height: 14px;
            margin-top: 3px;
            margin-left: 3px;
            @apply rounded-full block bg-sand-1;
            transition: all 200ms;
        }
    }

    &[data-pressed] .indicator {
        @apply border-sand-12;

        &:before {
            @apply bg-sand-1;
        }
    }

    &[data-selected] {
        .indicator {
            @apply border-sand-12 bg-sand-12;

            &:before {
                @apply bg-sand-1;
                transform: translateX(120%);
            }
        }

        &[data-pressed] {
            .indicator {
                @apply border-sand-12 bg-sand-12;

            }
        }
    }

    &[data-focus-visible] .indicator {
        @apply outline outline-2 outline-sand-10 outline-offset-2;
    }
}

